2005-01-06  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* StringObject.cs: add ctrs.

2005-01-05  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* ObjectPrototype.cs: Add internal ctr. Implement hasOwnProperty.
	* ObjectConstructor.cs: implemented CreateInstance.
	* expression.cs (emit_create_instance): add Boolean case.
	* Try.cs, Statement.cs (EmitStms), Literal.cs
	(ObjectLiteralItem.Emit), CodeGenerator.cs (fall_false): delete
	unused variables.

2004-12-15  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* CodeGenerator.cs: add support for compiling not only from cwd.

2004-12-13  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* expression.cs: emit code for null literal.

2004-12-06  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* expression.cs: added StringConstructor case.

	* MemberInfoList.cs: added internal classes Node, ListIter,
	ChainHash and implement MemberInfoList.
	* JSObject.cs: implement AddField, AddProperty, AddMethod,
	GetMembers, RemoveMember, GetEnumerator, add ChainHash's ext
	field.
	

2004-11-30  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* *Prototype.cs: return constructor.

2004-11-25  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* GlobalObject.cs: return the different kinds of object's
	constructors.
	* DateConstructor.cs, StringConstructor.cs, ObjectConstructor.cs,
	NumberConstructor.cs, VBArrayConstructor.cs,
	FunctionConstructor.cs, EnumeratorConstructor.cs,
	BooleanConstructor.cs, ArrayConstructor.cs, RegExpConstructor.cs,
	ActiveXObjectConstructor.cs : added default constructor and static
	contructor field.  	
	* ErrorConstructor.cs: added default and discriminatory ctrs. Let
	us know which type of error we are.
	* DateObject.cs: add field that hold the millisecond representation of date.
	* JSError.cs, JScriptException.cs: back to Microsoft.JScript namespace.
	* DatePrototype.cs: add default ctr.
	
	* MathObject.cs: implement its methods.

2004-11-24  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>
