@@ -114,5 +114,12 @@ namespace Microsoft.JScript {
 		{
 			throw new NotImplementedException ();
 		}
+
+#if NET_2_0 || BOOTSTRAP_NET_2_0
+		public override FieldInfo Mono_GetGenericFieldDefinition ()
+		{
+			throw new NotImplementedException ();
+		}
+#endif
 	}
 }
