@@ -1,5 +1,8 @@
 2005-01-06  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>
 
+	* JSFieldInfo.cs, JSLocalField.cs: Add conditional NET_2_0 or BOOTSTRAP_NET_2_0 's
+	Mono_GetGenericFieldDefinition.
+
 	* StringObject.cs: add ctrs.
 
 2005-01-05  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>
